--- a/Gym.UnitTests/Gym.UnitTests.csproj
+++ b/Gym.UnitTests/Gym.UnitTests.csproj
@@ -20,4 +20,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Gym\Gym.csproj" />
+  </ItemGroup>
+
 </Project>
